# Iranzamin

./: .gitignore  AGENTS.md  CLAUDE.md  TASKS.md
backend/: .env.example  pyproject.toml
backend/apps/common/: exceptions.py  text.py
backend/apps/common/tests/: test_exceptions.py  test_pagination.py  test_seed.py  test_text.py
backend/apps/contracts/: admin.py  apis.py  apps.py  filters.py  models.py  selectors.py  services.py  urls.py
backend/apps/contracts/migrations/: 0001_initial.py  0002_remove_contract_image_add_contractphoto.py
backend/apps/contracts/tests/: factories.py  test_apis.py  test_models.py  test_selectors.py  test_services.py
backend/apps/dashboard/: apis.py  selectors.py  urls.py
backend/apps/dashboard/tests/: test_apis.py  test_selectors.py
backend/apps/people/: admin.py  apis.py  apps.py  filters.py  models.py  selectors.py  services.py  urls.py
backend/apps/people/migrations/: 0001_initial.py  0002_personhistory.py
backend/apps/people/tests/: factories.py  test_apis.py  test_models.py  test_selectors.py  test_services.py
backend/apps/properties/: admin.py  apis.py  apps.py  filters.py  models.py  selectors.py  services.py  urls.py
backend/apps/regions/: admin.py  apis.py  apps.py  models.py  selectors.py  services.py  urls.py
backend/apps/requests/: admin.py  apis.py  apps.py  filters.py  models.py  selectors.py  services.py  urls.py
backend/apps/users/: admin.py  apis.py  models.py  selectors.py  services.py  urls.py
backend/config/: urls.py
backend/config/settings/: base.py  local.py  production.py
docs/: README.md  (+2 more)
(+164 files in other folders)
