[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.7",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.14.0",
    "django-filter>=25.2",
    "django-jalali>=7.4.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "pymysql>=1.2.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.6",
    "djangorestframework-stubs>=3.17.0",
    "factory-boy>=3.3.3",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.20",
]
